== Changelog ==

= 4.8.1 =

* Added a new option for the shortcode to define the id of the HTML container (useful when we have multiple shortcodes and we want to give a unique style to each instance).

= 4.8.0 =

* Added new section for post formats when changing the query in single posts or in an archive page.
* Added a filter for the `img` element of the featured image (thanks [@chancarlo](https://github.com/chancarlo) for the suggestion).

= 4.7.7 =

* Fixed the displaying of custom title when modifying the query in single posts/pages (thanks [@emmagbro](https://wordpress.org/support/users/emmagbro/) for reporting it).
* Code optimization.

= 4.7.6 =

* The link to the archive page can be automatically generated in single post or archive pages.
* The default options are in a separate function now to simplify the plugin.
* Code optimization.

= 4.7.5 =

* The displayed custom field value can now be filtered.
* The returned output of a meta query can now be filtered.

= 4.7.4 =

* It is no longer necessary to enter the custom field value in the "Custom field query" panel.
* Fixed the stripping of operators containing `<` or `>` in custom field query.

= 4.7.3 =

* Added support for private custom post types.

= 4.7.2 =

* Added option to display the number of comments only.
* Added option to hide the comments section if there is no comment.
* Fixed the displaying of comments number.

= 4.7.1 =

* Reverted widget title escaping which can break use of the widget_title filter. Thanks to @mlang38 for reporting this.
* Fixed link to review page on wordpress.org when viewing the plugin list page.

= 4.7.0 =

* Added new option to filter posts in the same category/tag/author/custom-field by searching for the title of the main post.
* Added "Post type", "Relevance (when searching)", and "Preserve post parent order" in "Order posts by" option.
* Added new options when changing the query in single posts or in an archive page.