@@ -3,6 +3,7 @@
 = 4.8.1 =
 
 * Added a new option for the shortcode to define the id of the HTML container (useful when we have multiple shortcodes and we want to give a unique style to each instance).
+* Fixed applying CSS in "Page Builder" by SiteOrigin plugin.
 
 = 4.8.0 =
 
